--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,18 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@formkit/auto-animate": "^0.9.0",
+    "@mui/material": "^7.3.4",
+    "@mui/x-date-pickers": "^8.14.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "canvas-confetti": "^1.9.3",
     "chrono-node": "^2.8.3",
+    "dayjs": "^1.11.18",
     "motion": "^12.23.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
