added a semi functional calendar (selects date but doesnt save it with the task)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "canvas-confetti": "^1.9.3",
     "chrono-node": "^2.8.3",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "motion": "^12.23.6",
     "react": "^19.1.0",
