--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "motion": "^12.23.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hotkeys-hook": "^5.2.1",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "react-selecto": "^1.26.3",
