--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,12 +28,14 @@
     "selecto": "^1.26.3",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+"scripts": {
+  "start": "react-scripts start",
+  "build:raw": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+  "build-sw": "node workbox-build.js",
+  "build": "npm run build:raw && npm run build-sw",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -51,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "workbox-build": "^7.4.0"
   }
 }
