--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -17,7 +17,8 @@
     {
       "src": "/favicon.png",
       "sizes": "any",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "start_url": "/",
